# Sketchpad

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: instructions.md  settings.json  settings.local.json
app/: .eslintrc.js  .eslintrc.json  .gitignore  app.config.js  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
deploy/: .env.example  docker-compose.prod.yml  nginx-initial.conf  nginx.conf  otel-config.yaml  start-services.sh
docs/: ARCHITECTURE_ISSUES.md  agent-tools.md  analytics.md  auth.md  claude-agent-sdk-python.md  claude-sandbox.md  database.md  event-streaming-architecture.md  infrastructure.md  ios-deployment.md  logging-system-design.md  mobile-responsive-auth-plan.md  mobile-tracing-design.md  observability.md  stroke-animation-flow.md  (+1 more)
server/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260103_0001_001_initial_schema.py  20260103_0002_002_drop_workspace_tables.py  20260104_0003_003_add_magic_link_tokens.py  20260104_0004_004_add_code_to_magic_link_tokens.py  20260105_0005_005_add_canvas_shares.py  20260115_0006_006_add_platform_to_magic_link_tokens.py  20260117_0007_007_change_user_id_to_uuid.py  20260117_1858_7372b4753296_change_user_id_to_uuid.py  20260118_0008_008_add_gallery_public_to_users.py
server/code_monet/: __init__.py  agent.py  agent_logger.py  brushes.py  canvas.py  cli.py  config.py  connections.py  executor.py  interpolation.py  logging_config.py  main.py  orchestrator.py  rate_limiter.py  registry.py  rendering.py  svg_parser.py  tools.py  tracing.py  types.py  user_handlers.py  workspace_state.py
server/code_monet/agent/: __init__.py  callbacks.py  processor.py  prompts.py  renderer.py
server/code_monet/auth/: __init__.py  dependencies.py  email.py  jwt.py  routes.py  schemas.py
server/code_monet/db/: __init__.py  engine.py  models.py  repository.py
server/code_monet/routes/: __init__.py  apple.py  auth_dev.py  canvas.py  debug.py  gallery.py  health.py  public_gallery.py  seo.py  strokes.py  tracing.py
server/code_monet/share/: __init__.py  routes.py
server/code_monet/tools/: __init__.py  callbacks.py  drawing.py  image_generation.py  naming.py  path_parsing.py  python_sandbox.py  signature.py  svg_generation.py
server/code_monet/types/: __init__.py  brushes.py  geometry.py  messages.py  paths.py  state.py  styles.py
server/code_monet/workspace/: __init__.py  gallery.py  persistence.py  strokes.py
server/drawing_agent/: agent.py  agent_logger.py  canvas.py  cli.py  config.py  connections.py  executor.py  handlers.py  interpolation.py  main.py  message_router.py  orchestrator.py  registry.py  shutdown.py  state.py  svg_parser.py  tools.py  tracing.py  types.py  user_handlers.py  workspace.py  workspace_state.py
server/drawing_agent/auth/: __init__.py  dependencies.py  email.py  jwt.py  password.py  rate_limit.py  routes.py  schemas.py
server/drawing_agent/db/: __init__.py  engine.py  models.py  repository.py
server/drawing_agent/share/: __init__.py  routes.py
server/scratch/: check_ws_init.py
server/tests/: __init__.py  test_agent.py  test_brushes.py  test_canvas.py  test_e2e_sdk.py  test_e2e_websocket_recording.py  test_executor.py  test_interpolation.py  test_logging_config.py  test_orchestrator_wake.py  test_path_parsing.py  test_pause_on_disconnect.py  test_pen_message.py  test_public_gallery.py  test_rate_limiter.py  test_registry_agent_loop.py  test_stroke_queue.py  test_svg_parser.py  test_tools.py  test_traces.py  test_user_handlers.py  test_workspace_limits.py
server/tests/agent/: test_agent.py  test_callbacks.py  test_processor.py  test_prompts.py  test_renderer.py
server/tests/fixtures/: agent_turn_paint.json  agent_turn_plotter.json  text_chunking_flow.json
(+250 files in other folders)
